--- a/Final/Analysts Information.ipynb
+++ b/Final/Analysts Information.ipynb
@@ -30,7 +30,9 @@
     "from sqlalchemy import create_engine as ce\n",
     "import seaborn as sns\n",
     "pd.options.mode.chained_assignment = None  # default='warn'\n",
-    "database = ce(\"mysql://root:******@localhost:3306/project3\")"
+    "database = ce(\"mysql://root:******@localhost:3306/project3\")\n",
+    "\n",
+    "# Function to get the analyst information"
    ]
   },
   {
