--- a/Final/Analysts profile.ipynb
+++ b/Final/Analysts profile.ipynb
@@ -25,9 +25,7 @@
     "from sqlalchemy import create_engine as ce\n",
     "import seaborn as sns\n",
     "pd.options.mode.chained_assignment = None  # default='warn'\n",
-    "database = ce(\"mysql://root:*****@localhost:3306/project3\")\n",
-    "\n",
-    "# Function to get the profile information"
+    "database = ce(\"mysql://root:*****@localhost:3306/project3\")"
    ]
   },
   {
