Fixed issue with syntax

--- a/Final/Company and EPS data.ipynb
+++ b/Final/Company and EPS data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +29,13 @@
     "from sqlalchemy import create_engine as ce\n",
     "import seaborn as sns\n",
     "pd.options.mode.chained_assignment = None  # default='warn'\n",
-    "database = ce(\"mysql://root:*****@localhost:3306/project3\")\n"
-    # Adding more code
+    "database = ce(\"mysql://root:*****@localhost:3306/project3\")\n",
+    "\n",
+    "# Adding Code changes here in the proper syntax\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -577,6 +579,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
