--- a/Final/Analysts Information.ipynb
+++ b/Final/Analysts Information.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.support.ui import Select\n",
     "from selenium.webdriver.chrome.service import Service\n",
@@ -30,7 +31,9 @@
     "from sqlalchemy import create_engine as ce\n",
     "import seaborn as sns\n",
     "pd.options.mode.chained_assignment = None  # default='warn'\n",
-    "database = ce(\"mysql://root:******@localhost:3306/project3\")\n"
+    "database = ce(\"mysql://root:******@localhost:3306/project3\")\n",
+    "\n",
+    "# Added more code here\n"
    ]
   },
   {
