--- a/Final/Analysts profile.ipynb
+++ b/Final/Analysts profile.ipynb
@@ -25,7 +25,13 @@
     "from sqlalchemy import create_engine as ce\n",
     "import seaborn as sns\n",
     "pd.options.mode.chained_assignment = None  # default='warn'\n",
-    "database = ce(\"mysql://root:*****@localhost:3306/project3\")"
+    "database = ce(\"mysql://root:*****@localhost:3306/project3\")\n",
+    "\n",
+    "# Added more code here\n",
+    "\n",
+    "# Added more code here\n",
+    "\n",
+    "# Added more code here\n"
    ]
   },
   {
